Fix spacing in about section of posts

--- a/frontend/app/src/components/Blog/styles/Post.sass
+++ b/frontend/app/src/components/Blog/styles/Post.sass
@@ -6,6 +6,9 @@
   padding: 8px 0px 8px 30px
   max-width: 90%
 
+.Post-info
+  padding-bottom: 10px
+
 .Post-title-wrap
   margin-bottom: 4px
 
@@ -73,7 +76,7 @@
     cursor: pointer
 
 .Post-about-section
-  padding: 5px 0px 10px
+  padding-top: 5px
   color: $text-primary-color
   font-size: 14px
   text-align: justify
